[package]
name = "leetcode"
version = "0.1.0"
authors = ["Andrew Bennett <potatosaladx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.6.0"
assert_approx_eq = "1.1.0"

[lib]
doctest = false
test = true
